Registro de usuarios, CRUD admin, imágenes en DB, control de propiedad y panel de reclamos por rol